--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -488,7 +488,7 @@ body.admin-bar .move-right header#header {
 
 .left-off-canvas-menu {
   background-color: #231f20;
-  overflow: visible;
+  overflow: auto;
   list-style-type: none; }
   .left-off-canvas-menu ul {
     margin-left: 0;
